# lapack-cmake-fetchContent

./: CMakeLists.txt  CMakePresets.json  README.md  VERSION  meson.build  meson_options.txt  setup.cmake
.github/workflows/: ci.yml  ci_linux.yml  ci_macos.yml  ci_windows.yml
BLAS/SRC/: meson.build
BLAS/src/: CMakeLists.txt
CBLAS/src/: CMakeLists.txt  meson.build
CMAKE/: LAPACKConfig.cmake.in  options.cmake
LAPACKE/src/: CMakeLists.txt  meson.build
LAPACKE/utils/: CMakeLists.txt  meson.build
SRC/: meson.build
TESTING/: test_dgesvd.f90  test_nrm2.f90  test_sgesvd.f90
cmake/: compilers.cmake  get_lapack.cmake  install.cmake  lapack.json  lapack_src.cmake  libraries.json  options.cmake
cmake/Modules/: FindLAPACK.cmake
example/: CMakeLists.txt  test_dgesvd.f90  test_sgesvd.f90
src/: CMakeLists.txt
test/: CMakeLists.txt  test_nrm2.f90  test_sgesvd.f90
tests/: test_dgesvd.f90
