option('use_lapacke', type : 'boolean', value: false)
option('use_xblas', type : 'boolean', value: false)
option('use_cblas', type : 'boolean', value: false)
option('blas_only', type : 'boolean', value: false, yield: true)
option('arith', type : 'array', value : ['s', 'd'],
  description: 'real kind: s=real32, d=real64, c=complex64, z=complex128', yield: true)
